Added metadata to the index.html file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Bebas+Neue&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta property="og:title" content="Ari Lavine's Resume Site" />
+  <meta name="twitter:title" content="Ari Lavine's Resume Site" />
+
+  <meta name="description" content="This site contains some of my achivements, information about me, and some ways to contact me!" />
+  <meta property="og:description" content="This site contains some of my achivements, information about me, and some ways to contact me!" />
+  <meta name="twitter:description" content="This site contains some of my achivements, information about me, and some ways to contact me!" />
+
+  <meta property="og:image" content="https://draconicov.github.io/favicon.ico" />
+  <meta name="twitter:image" content="https://draconicov.github.io/favicon.ico" />
 </head>
 
 <body id="fullpage"class='bodyclassbody' style="background-color: black !important;">
