--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 <meta property="og:title" content="Ari Lavine's Resume Site" />
   <meta name="twitter:title" content="Ari Lavine's Resume Site" />
 
-  <meta name="description" content="This site contains some of my achivements, information about me, and some ways to contact me!" />
-  <meta property="og:description" content="This site contains some of my achivements, information about me, and some ways to contact me!" />
-  <meta name="twitter:description" content="This site contains some of my achivements, information about me, and some ways to contact me!" />
+  <meta name="description" content="This site contains some of my achivements, information about me, and some" />
+  <meta property="og:description" content="Your Description" />
+  <meta name="twitter:description" content="Your Description" />
 
-  <meta property="og:image" content="https://draconicov.github.io/favicon.ico" />
-  <meta name="twitter:image" content="https://draconicov.github.io/favicon.ico" />
+  <meta property="og:image" content="img_url" />
+  <meta name="twitter:image" content="img_url" />
 </head>
 
 <body id="fullpage"class='bodyclassbody' style="background-color: black !important;">
@@ -106,7 +106,7 @@
          </div>
       </section>
 
-      <section class="section" data-class="primary-color-1-1" id="portfolio" data-color="#ADB2C2">
+      <section class="section" data-class="primary-color-1-1" id="portfolio" data-color="#96a4ae">
          <h1 class="primary-color-0-0 portfolio-header">My Projects (Click Logo)</h1>
          <div class="carousel-wrapper">
             <div class="carousel">
