--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <a target="_blank" rel="nofollow noopener" style="margin:auto; " title="Contacting Ari" href="mailto:alavine171@gmail.com"><img src="Contact.png"></a>
         <a href="https://66a4e5a8-d05c-4056-8f44-1d5a47ab5efb-00-89kpnsddjqfz.kirk.replit.dev/"><p  style="font-size: 2rem; color:white; margin-right:auto;align-self:flex-end">Design by Lyra Ericson  <i class="fa fa-external-link"></i></p></a>
       </section>
-      <section class="section" data-class="secondary-color-1-1" data-color="#8D0801"></section>
+    <!--   <section class="section" data-class="secondary-color-1-1" data-color="#8D0801"></section> -->
    </div>
 
 </body>
